fix: readme, send email lang, db init, unit test